update Dockerfile, reducing size and create user